...
    <string name="close_menu">Close menu</string>
    <string name="open_navigation">Open navigation</string>
    <string name="globals">Globals</string>
    <string name="exit_globals">Exit globals</string>
    <string name="exit_draft">Exit draft</string>
    <string name="global_variables">Global variables</string>
    <string name="copied">Copied</string>
    <string name="error_short">Err</string>
    <string name="show_error">Show error</string>

    <!-- File list -->
    <string name="new_folder">New folder</string>
    <string name="toggle_theme">Toggle theme</string>
...
